Use Character.valueOf